--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
 
   google_fonts: ^0.3.9
   flutter_icons: ^1.0.0+1
+  carousel_select_widget: ^0.1.0
 
 dev_dependencies:
   flutter_test:
